# rust-web-project-template

./: Cargo.toml  README.md  rename.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
foobar-common/: Cargo.toml
foobar-common/src/: lib.rs
foobar-daemon/: Cargo.toml
foobar-daemon/src/: config.rs  main.rs
foobar-web/: Cargo.toml
foobar-web/src/: config.rs  endpoints.rs  handlers.rs  lib.rs  main.rs  routes.rs  state.rs  static_files.rs  template_context.rs  views.rs
foobar-web/src/handlers/: about.rs  index.rs  item.rs  static_files.rs
foobar-web/src/middleware/: headers.rs  metrics.rs
foobar-web/src/views/: about.rs  index.rs  item.rs  static_files.rs
foobar-web/static/: amdmi3.css
foobar-web/templates/: _base.html  about.html  index.html  item.html
foobar-web/tests/integration_tests/: about.rs  index.rs  item.rs  mod.rs  static_file.rs
foobar-web/tests/snapshot_tests/: about.rs  index.rs  item.rs  mod.rs
foobar-web/tests/snapshot_tests/snapshots/: snapshot__snapshot_tests__about__about.snap  snapshot__snapshot_tests__about__index.snap  snapshot__snapshot_tests__index__index.snap  snapshot__snapshot_tests__item__item.snap  snapshot__snapshot_tests__item__item_not_found.snap
